[package]
authors = ['antimatter Team']
build = 'build.rs'
description = 'Social Network Plus DeFi'
edition = '2018'
homepage = 'https://antimatter.network'
license = "Apache-2.0"
repository = 'https://github.com/antimatter-network/antimatter-network/'
name = 'antimatter-network'
version = '0.0.1'

[[bin]]
name = 'antimatter-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
hex-literal = "0.3.1"
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

# local dependencies
antimatter-network-runtime = { path = '../runtime', version = '0.0.1' }
model = { package = "pallet-model", path = "../pallets/model" }
asset-pool = { package = "pallet-asset-pool", path = "../pallets/asset_pool" }

# Substrate dependencies
frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-aura = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-aura = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'

[features]
default = []
runtime-benchmarks = ['antimatter-network-runtime/runtime-benchmarks']
