[package]
authors = ['antimatter Team']
description = 'Social Network Plus DeFi'
edition = '2018'
homepage = 'https://antimatter.network'
license = "Apache-2.0"
repository = 'https://github.com/antimatter-network/antimatter-network/'
name = "pallet-pb"
version = "0.0.1"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }

orml-tokens = { default-features = false, version = "0.4.0" }
orml-traits = { default-features = false, version = "0.4.0" }

model = { package = "pallet-model", path = "../model", default-features = false }
asset-pool = { package = "pallet-asset-pool", path = "../asset_pool", default-features = false }

[dev-dependencies]
sp-io = "3.0.0"
sp-core = "3.0.0"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "orml-tokens/std",
    "model/std",
    "asset-pool/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]